unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/ETT_Staging_Quotation_Request__c.object-meta.xml
<CustomObject>
    <label>Staging Quotation Request</label>
    <nameField>
        <displayFormat>SQRN-{0000}</displayFormat>
        <label>Staging Quotation Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Quotation Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>