unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Approve_Stage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Approve_Stage__c</fullName>
    <label>Approve Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending for Sale Team Approval</fullName>
            </value>
            <value>
                <fullName>Pending for FM Approval</fullName>
            </value>
            <value>
                <fullName>Pending for HOO Approval</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Resubmit</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
                <isActive>false</isActive>
                <label>Recall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>