unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_FM_Price_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>ETT_FM_Price_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM Price Acceptance</label>
    <type>Checkbox</type>
</CustomField>