unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_HOO_Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>ETT_HOO_Rejection_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HOO Rejection Comment</label>
    <type>TextArea</type>
</CustomField>