unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Inspection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Card</label>
    <referenceTo>ETT_Inspection_Card__c</referenceTo>
    <relationshipLabel>Staging Quotation Request</relationshipLabel>
    <relationshipName>Staging_Quotation_Request</relationshipName>
    <type>Lookup</type>
</CustomField>