unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Quotation Request</relationshipLabel>
    <relationshipName>Staging_Quotation_Request</relationshipName>
    <type>Lookup</type>
</CustomField>