unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_New_Hot_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_New_Hot_Price__c</fullName>
    <label>New Hot Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>