unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_New_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_New_Tyre_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Tyre Size</label>
    <length>250</length>
    <type>Text</type>
</CustomField>