unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>