unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Reasons_For_Price_Reduction__c.field-meta.xml
<CustomField>
    <fullName>ETT_Reasons_For_Price_Reduction__c</fullName>
    <label>Reasons For Price Reduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retreaded Tyre</fullName>
            </value>
            <value>
                <fullName>Average Quality Tyre</fullName>
            </value>
            <value>
                <fullName>Non Brand Tyre</fullName>
            </value>
            <value>
                <fullName>From the Customer</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>