unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rejection_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>