unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Resubmission_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Resubmission_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resubmission Reason</label>
    <type>TextArea</type>
</CustomField>