unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Retreading_charge__c.field-meta.xml
<CustomField>
    <fullName>ETT_Retreading_charge__c</fullName>
    <label>Retreading charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>