unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Stock_Retreading_Charge__c.field-meta.xml
<CustomField>
    <fullName>ETT_Stock_Retreading_Charge__c</fullName>
    <label>Stock Retreading Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>