unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Tyre_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Condition__c</fullName>
    <label>Tyre Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Precure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>