unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Tyre_Life__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Life__c</fullName>
    <label>Tyre Life</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Retread 1</fullName>
            </value>
            <value>
                <fullName>Retread 2</fullName>
            </value>
            <value>
                <fullName>Retread 3</fullName>
            </value>
            <value>
                <fullName>Retread 4</fullName>
            </value>
            <value>
                <fullName>Retread 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>