unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Tyre_Process__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Process__c</fullName>
    <label>Tyre Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retread</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>