unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/ETT_Tyre_Size_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Staging Quotation Request</relationshipLabel>
    <relationshipName>Staging_Quotation_Request</relationshipName>
    <type>Lookup</type>
</CustomField>