unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Staging Quotation Request</relationshipLabel>
    <relationshipName>Staging_Quotation_Request</relationshipName>
    <type>Lookup</type>
</CustomField>