unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/Price_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Price_Change_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Price Change Reason</label>
    <type>TextArea</type>
</CustomField>