unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/fields/Selling_Procure_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Procure_Price__c</fullName>
    <label>Selling Procure Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>