unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/recordTypes/ETT_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Supplier</fullName>
    <active>true</active>
    <description>Supplier that provides tyres to ET for retreading process.Supplier consist of Internal or External Supply.</description>
    <label>Supplier</label>
</RecordType>