unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/validationRules/ETT_Retreading_or_Stock_Retreading.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Retreading_or_Stock_Retreading</fullName>
    <active>true</active>
    <description>In Retreading or Stock Retreading Charge one should have the value</description>
    <errorConditionFormula>AND( ISBLANK( ETT_Retreading_charge__c ),
 ISBLANK( ETT_Stock_Retreading_Charge__c ) ,RecordType.Name=&#39;ETT_Sales&#39; )</errorConditionFormula>
    <errorMessage>Either, Retreading Charge or Stock Retreading Charge, one should have the value.</errorMessage>
</ValidationRule>