unpackaged/main/default/objects/ETT_Staging_Quotation_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Lead__c</columns>
    <columns>ETT_Brand__c</columns>
    <columns>ETT_Country__c</columns>
    <columns>ETT_IS_Approved__c</columns>
    <columns>ETT_Pattern__c</columns>
    <columns>ETT_Quantity__c</columns>
    <columns>ETT_Tyre_Size_Master__c</columns>
    <columns>ETT_Tyre_Condition__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>